--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Magic App",
   "short_name": "Magic",
-  "start_url": ".",
-  "scope": ".",
+  "start_url": "/MagicTheGatheringApp/",
+  "scope": "/MagicTheGatheringApp/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
