--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,35 @@
 {
-  "name": "Magic App",
-  "short_name": "Magic",
-  "start_url": "/MagicTheGatheringApp/",
-  "scope": "/MagicTheGatheringApp/",
+  "name": "Magic The Gathering App",
+  "short_name": "MTG App",
+  "description": "A modular Magic the Gathering app",
+  "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "./assets/mtg-icon.png",
+      "src": "assets/mtg-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./assets/mtg-icon.png",
+      "src": "assets/mtg-icon.png",
       "sizes": "512x512",
       "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "assets/screenshot1.png",
+      "sizes": "800x600",
+      "type": "image/png",
+      "platform": "wide"
+    },
+    {
+      "src": "assets/screenshot2.png",
+      "sizes": "800x600",
+      "type": "image/png",
+      "platform": "wide"
     }
   ]
 }
