--- a/manifest.json
+++ b/manifest.json
@@ -8,25 +8,25 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "assets/mtg-icon.png",
+      "src": "./assets/mtg-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/mtg-icon-2.png",
+      "src": "./assets/mtg-icon-2.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "assets/screenshot1.png",
+      "src": "./assets/screenshot1.png",
       "sizes": "800x600",
       "type": "image/png",
       "platform": "wide"
     },
     {
-      "src": "assets/screenshot2.png",
+      "src": "./assets/screenshot2.png",
       "sizes": "800x600",
       "type": "image/png",
       "platform": "wide"
